@startuml
package "Data Transfer Objects" {
    class SensorData <<record>> {
        + farmId: UUID
        + deviceId: UUID
        + metricType: String
        + value: Float
        + timestamp: Instant
    }
}

package "Observer Pattern (Nhận Dữ liệu Cảm biến)" {
    interface Subject {
        + attach(obs: Observer)
        + detach(obs: Observer)
        + notifyObservers(data: SensorData)
    }

    class MqttReceiverService {
        - observers: List<Observer>
        + onMessageReceived(topic: String, payload: String)
        + notifyObservers(data: SensorData)
    }
    Subject <|.. MqttReceiverService

    interface Observer {
        + update(data: SensorData)
    }
    MqttReceiverService o--> "*" Observer : Manages

    class DatabaseLoggerObserver {
        + update(data: SensorData)
        - saveToTimeSeriesDB()
    }
    class WebSocketNotifierObserver {
        + update(data: SensorData)
        - pushToReactFrontend()
    }
    class RuleEngineObserver {
        + update(data: SensorData)
        - checkSensorConditions()
    }
    
    Observer <|.. DatabaseLoggerObserver
    Observer <|.. WebSocketNotifierObserver
    Observer <|.. RuleEngineObserver
}
@enduml